--- a/ProjM/ProjM/Pages/managerAcces.html
+++ b/ProjM/ProjM/Pages/managerAcces.html
@@ -270,8 +270,8 @@
         }
 
 
-        function deleteSuccess(obj) {
-            alert('delete success');
+        function deleteSuccess(obj) {    
+            swal("Delete Successfuly!", "Great Job", "success");
         }
 
     </script>
