--- a/ProjM/ProjM/Pages/ItemPage.html
+++ b/ProjM/ProjM/Pages/ItemPage.html
@@ -357,6 +357,8 @@
             console.log("YAHOOO");
             console.log(data[0].Ifrmae)
             let video = data[0].Ifrmae
+            //let vid = data[0].Ifrmae.src;
+            //let url = document.getElementsByTagName("ifrmae").src;
 
             $("#frame").append(video);
 
@@ -443,7 +445,11 @@
                                 <label for="title-input">שם תכנית</label>
                                 <input id="title-input" type="text" name="title-input" value="" /><br>
                                 <label for="id-input">מספר תכנית</label>
-                                <input id="id-input" type="text" name="id-input" value="" />
+                                <input id="id-input" type="text" name="id-input" value="" /><br>
+
+                                <!--<label for="id-viedo">ווידאו</label>
+                                <input id="id-viedo" type="text" name="id-viedo" value="" />-->
+
                             </div>
                             <div>
                                 <label for="desc-input">תאור</label>
