--- a/ProjM/ProjM/Pages/videoPage.html
+++ b/ProjM/ProjM/Pages/videoPage.html
@@ -22,8 +22,6 @@
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
@@ -32,11 +30,13 @@
     <script src="../Scripts/jquery-3.4.1.js"></script>
     <script src="../Scripts/jquery-3.4.1.min.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <link href="style.css" rel="stylesheet" />
     <script src="../Scripts/ajaxCalls.js"></script>
 
     <script>
-        checkUser();
+        /*checkUser();*/
         function checkUser() {
             if (localStorage["userObject"] != null) {
                 tastStr = JSON.parse(localStorage["userObject"]);
@@ -53,6 +53,7 @@
         });
 
         ////////////
+        checkUser();
         var myHeaders = new Headers();
         myHeaders.append("Cookie", "__Host-GAPS=1:FsHQzwqwnMp9ThsOy3vv2m5mhJr4bA:Tp9fKrR5Z_pjUb7z");
 
@@ -66,7 +67,8 @@
             .then(response => response.text())
             .then(result => console.log(result))
             .catch(error => console.log('error', error));
-        //////////////
+
+
 
         /**
          * Sample JavaScript code for youtube.search.list
